# lau-functional-programming

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: adt.rs  combinatory.rs  functor.rs  lambda.rs  lazy.rs  lib.rs  monad.rs  pattern.rs  pipeline.rs  recursion.rs  type_theory.rs
